--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"declarationMap": true,
 		"sourceMap": true,
 		"strict": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"skipLibCheck": true
 	}
 }
